Fix z-index of header

--- a/static/style.css
+++ b/static/style.css
@@ -66,6 +66,7 @@ header {
   background: linear-gradient(45deg, rgb(47,186,204) 0%, rgb(73,214,181) 100%);
   justify-content: space-between;
   align-items: center;
+  z-index: 50;
 }
 
 header > a {
